--- a/Persistence.Implementation/Persistence.Implementation.csproj
+++ b/Persistence.Implementation/Persistence.Implementation.csproj
@@ -92,6 +92,10 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DBObjects\Scripts\" />
+    <Folder Include="DBObjects\StoredProcedures\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
