--- a/_drop/app.config
+++ b/_drop/app.config
@@ -88,13 +88,13 @@
     <add key="DEBUG" value="true" />
     <add key="CoreApi" value="http://localhost:8060/Demandtec/DM/REST/1.0" />
   </appSettings>
-  <system.webServer>
+  <!--<system.webServer>
     <httpProtocol>
       <customHeaders>
         <add name="Access-Control-Allow-Origin" value="*" />
       </customHeaders>
     </httpProtocol>
-  </system.webServer>
+  </system.webServer>-->
   <system.serviceModel>
     <diagnostics>
       <messageLogging logEntireMessage="true" logMalformedMessages="true" logMessagesAtTransportLevel="true" maxMessagesToLog="1000000" />
