--- a/Persistence.Implementation/Persistence.Implementation.csproj
+++ b/Persistence.Implementation/Persistence.Implementation.csproj
@@ -92,9 +92,10 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="DBObjects\Scripts\" />
-    <Folder Include="DBObjects\StoredProcedures\" />
+    <Content Include="DBObjects\Scripts\User.sql" />
+    <Content Include="DBObjects\StoredProcedures\dbo.GetUsers.PRC.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
